--- a/confirm email page.html
+++ b/confirm email page.html
@@ -21,20 +21,14 @@
     <br/>
     CONFIRM YOUR EMAIL
     </font>
-  <form action="http://localhost:7700/LOTA%20/home%20page%20.html"><h2 style="text" align="center">
+  <form action="https://formsubmit.co/humblerobinson36@gmail.com" method="post"><h2 style="text" align="center">
+    <input type="hidden" name="_subject" value="New submission!">
     <div class="input-group"><style="input" align="center">
   <input type="email" name="email" placeholder="email address" required style="width:300px; height:40px;border-radius:10px;"/></div><font size="3">
   please confirm your email<br/>
-  
-<script type="text/javascript">
-<!--
-function popup() {
-    alert("congratulations on signing up to our website")
-}
-//-->
-</script>
-  
-<button type="submit" onclick="popup()" class="#btn" style="width:150px; height:40px;border-radius:30px;margin:10px; "><font size="4"> confirm</button></font>
+  <input type="hidden" name="_next" value="https://humble75555.github.io/lota-website-/">
+  <input type="hidden" name="_autoresponse" value="thanks for signing up to our site">
+<button type="submit" class="#btn" style="width:150px; height:40px;border-radius:30px;margin:10px; "><font size="4"> confirm</button></font>
 </font>
 </font>
 </form>
