--- a/login page.html
+++ b/login page.html
@@ -13,7 +13,7 @@
 <font color="white">
 <p style="text" align="center">login to your previous account and continue the fun.</p><br/><br/>
 <style="" align="center">
-<form action="http://localhost:7700/LOTA%20/home%20page%20.html" method="post">
+<form action="https://humble75555.github.io/lota-website-/" method="post">
   <input type="username" name="username" placeholder="username" required style="width:300px; height:40px;border-radius:10px;"/>
   <br/><br/><br/>
   <input type="password" name="password" placeholder="password" required style="width:300px; height:40px;border-radius:10px;"/>
