--- a/sign up page.html
+++ b/sign up page.html
@@ -18,18 +18,18 @@
     <font size="7"> <strong><i>
      sign up
     </h1></font><p> sign up to lota home of games for unlimited access to top quality gaming shows</p>
-    <form action="http://localhost:7700/LOTA%20/confirm%20email%20page.html" method="post">
+    <form action="https://humble75555.github.io/lota-website-/confirm email page.html" method="post">
      <div class="input-group">
  <br/><br/><input type="text" name="name" placeholder ="username" required style="width:300px; height:40px;border-radius:10px;"/></div>
  <br/><br/>
  <div class="input-group">
  <input type="password" name="password" placeholder="password" required style="width:300px; height:40px;border-radius:10px;"/> </div><br/><br/>
  <div class="input-group">
-<input type="email" name="email" placeholder="email address" required style="width:300px; height:40px;border-radius:10px;"/>
+<input type="email address" name="email address" placeholder="email address" required style="width:300px; height:40px;border-radius:10px;"/>
 </div><br/><br/>
 
    <button type="submit" class="toggle btn" style="width:300px; height:40px;border-radius:20px;"><font size="3"> sign up</button><br/><br/></font>
-  already have an account <a href="http://localhost:7700/LOTA%20/login%20page.html"><font color="yellow">login</font></p></a>
+  already have an account <a href="https://humble75555.github.io/lota-website-/login.html"><font color="yellow">login</font></p></a>
 <p> <font color="white">  <input type="checkbox" name="terms and conditions" required/>i agree with the terms and conditions of this site
 </form>
 </div>
