--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <font size="7"> <strong><i>
      sign up
     </h1></font><p> sign up to lota home of games for unlimited access to top quality gaming shows</p>
-    <form action="https://humble75555.github.io/lota-website-/confirm email page.html" method="post">
+    <form action="https://humble75555.github.io/lota-website-/confirm email page.html" method="post/get">
      <div class="input-group">
  <br/><br/><input type="text" name="name" placeholder ="username" required style="width:300px; height:40px;border-radius:10px;"/></div>
  <br/><br/>
